# event-test-harness

./: .dockerignore  .env-template  .gitignore  Dockerfile  Dockerfile-consumer  Dockerfile-producer  Dockerfile-rdf-delta-fuseki-server  Dockerfile-rdf-delta-server  README.md  Setup Azure Service Bus.md  config.ttl  msal-readme.md  msalfapi.py  msaltemp.py  pyproject.toml  rdf-delta-fuseki-server-config.ttl
.github/workflows/: docker-image.yml
src/: app.py  consumer.py  msal-producer.py  producer.py
src/templates/: example_insert_query.html  example_select_query.html  index.html  messages.html  producer-index.html
