[tool.poetry]
name = "event-test-harness"
version = "0.1.0"
description = ""
authors = ["hjohns"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
azure-servicebus = "^7.12.2"
msal = "^1.28.0"
azure-eventhub = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

